[package]
name = "git-branches-overview"
version = "0.1.0"
authors = ["Benoît Zugmeyer <bzugmeyer@gmail.com>"]
edition = "2018"
license = "GPLv3"
license-file = "COPYING"
keywords = ["git"]
repository = "https://github.com/BenoitZugmeyer/git-branches-overview"
homepage = "https://github.com/BenoitZugmeyer/git-branches-overview"
description = """
Visualize branches 'ahead' and 'behind' commits compared to a base revision or their upstream.
"""

[dependencies]
git2 = "0.7"
prettytable-rs = "0.8.0"
structopt = "0.2.14"
